feat(arrecadacao): enriquecer historico de usuarios
- Adicionar ator enriquecido ao historico de status de usuarios de musica

- Preservar autor legado e fallback para registros antigos

- Incluir testes e review da task 5.0